--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Helvetica Neue";
   src:
-    url("../fonts/HelveticaNeue-Bold.woff2") format("woff2"),
+    url("/fonts/HelveticaNeue-Bold.woff2") format("woff2"),
     url("HelveticaNeue-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
@@ -11,7 +11,7 @@
 @font-face {
   font-family: "HelveticaNeue";
   src:
-    url("../fonts/HelveticaNeue-UltraLight.woff2") format("woff2"),
+    url("/fonts/HelveticaNeue-UltraLight.woff2") format("woff2"),
     url("HelveticaNeue-UltraLight.woff") format("woff");
   font-weight: 100;
   font-style: normal;
