--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,30 +1,42 @@
-.content {
+main {
   margin: 0 auto;
   width: 100%;
   max-width: 1366px;
-  padding-left: 80px;
-  padding-right: 80px;
+  background-color: #eae8e4;
+}
+
+/*Hero banner*/
+.hero-banner {
   background-color: #2d2d2d;
   border-bottom-right-radius: 32px;
   border-bottom-left-radius: 32px;
   color: #eae8e4;
+  position: relative;
 }
 
-/*Hero banner*/
-.hold-all-sections {
+/* .monks-img {
+  position: absolute;
+  width: auto;
+  height: 490px;
+  top: -73px;
+  right: 0px;
+}
+
+.monks-img img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
+
+section.hero-banner > div {
   max-width: 1206px;
   margin: 0 auto;
-}
-
-.hero-banner {
-  padding-top: 36px;
-  padding-bottom: 24px;
+  padding: 34px 24px 24px 24px;
 }
 
 .hero-banner-title {
   font-size: 48px;
-  line-height: 1;
+  line-height: 130%;
   margin-bottom: 10px;
 }
 
@@ -51,6 +63,34 @@
 .hero-banner-scroll-img {
   width: 70px;
   height: 100px;
+}
+
+/*Grid cards*/
+.section-title {
+  font-size: 40px;
+  line-height: 100%;
+  color: #2d2d2d;
+  margin-bottom: 8px;
+}
+
+.section-main-text {
+  color: #2d2d2d;
+  font-size: 24px;
+  line-height: 110%;
+}
+
+.cards {
+  padding: 64px 24px;
+  background-color: #eae8e4;
+  max-width: 1206px;
+  margin: 0 auto;
+}
+
+.grid-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 24px;
+  margin-top: 40px;
 }
 
 @media (max-width: 992px) {
@@ -84,25 +124,41 @@
 
   .hero-banner {
     padding-top: 16px;
-    padding-bottom: 24px;
   }
 
-  .content {
-    border-radius: 0px;
+  .grid-cards {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 16px;
   }
 }
 
 @media (max-width: 479px) {
-  .hero-banner-title {
+  .hero-banner {
+    border-radius: 0px;
+  }
+
+  .hero-banner-title,
+  .section-title {
     font-size: 24px;
   }
 
-  .hero-banner-subtitle {
+  .hero-banner-subtitle,
+  .section-main-text {
     font-size: 16px;
   }
 
   .hero-banner-title,
   .hero-banner-subtitle {
     max-width: 180px;
+  }
+
+  .grid-cards {
+    gap: 16px;
+    margin-top: 24px;
+  }
+
+  .cards {
+    padding: 32px 24px;
+    background-color: #eae8e4;
   }
 }
