--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -5,6 +5,12 @@ main {
   background-color: #eae8e4;
 }
 
+.default-container {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1206px;
+}
+
 /*Hero banner*/
 .hero-banner {
   background-color: #2d2d2d;
@@ -29,8 +35,6 @@ main {
 } */
 
 section.hero-banner > div {
-  max-width: 1206px;
-  margin: 0 auto;
   padding: 34px 24px 24px 24px;
 }
 
@@ -80,15 +84,106 @@ section.hero-banner > div {
 }
 
 .cards {
-  padding: 64px 24px;
+  padding: 64px 24px 32px 24px;
   background-color: #eae8e4;
-  max-width: 1206px;
-  margin: 0 auto;
 }
 
 .grid-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 24px;
+  margin-top: 40px;
+}
+
+/*Third section*/
+.third-section {
+  padding: 64px 24px;
+  width: 100%;
+}
+
+.third-section-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 24px;
+  align-items: stretch;
+}
+
+.third-section-grid-hold-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 24px;
+}
+
+.third-section-col-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.third-section-col-1-hold-text {
+  margin-bottom: 34px;
+}
+
+.third-section-col-2 {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+}
+
+/*App section*/
+.app-section {
+  padding: 32px 24px 64px 24px;
+}
+
+.app-section-container {
+  background-color: #3c0c60;
+  border-radius: 24px;
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text-gray-color {
+  color: #eae8e4 !important;
+}
+
+.app-section-container-col-text {
+  width: calc(100% - 257px);
+}
+
+.google-play-image {
+  margin-bottom: 8px;
+}
+
+/*product-category*/
+.category-section {
+  padding: 32px 24px;
+}
+.product-category {
+  font-family: "Inter", sans-serif;
+  border-radius: 32px;
+  border: 1px solid #7d26c9;
+  padding: 8px 40px;
+  background-color: #dfdcd5;
+  font-weight: 600;
+  line-height: 150%;
+  color: #7d26c9;
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.product-category:hover {
+  background-color: #3c0c60;
+  color: #eae8e4;
+  border-color: #3c0c60;
+}
+
+.grid-category-products {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 24px;
   margin-top: 40px;
 }
@@ -105,6 +200,20 @@ section.hero-banner > div {
 
   .hero-banner-subtitle {
     font-size: 20px;
+  }
+
+  .third-section-grid {
+    gap: 16px;
+  }
+
+  .app-section-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .app-section-container-col-text {
+    width: calc(100%);
+    margin-bottom: 40px;
   }
 }
 
@@ -157,8 +266,37 @@ section.hero-banner > div {
     margin-top: 24px;
   }
 
-  .cards {
+  .mobile-section {
     padding: 32px 24px;
-    background-color: #eae8e4;
+  }
+
+  .third-section-grid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+
+  .app-section-container {
+    padding: 24px;
+  }
+
+  .product-category {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 8px 24px;
+    font-size: 16px;
+  }
+
+  .grid-category-products {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 16px;
+    margin-top: 24px;
+  }
+}
+
+@media (max-width: 360px) {
+  .app-section-hold-app-img,
+  .app-section-hold-app-img img {
+    width: 100%;
   }
 }
